--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ indicatif = "0.17"
 symphonia = "0.5.4"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+crossbeam-channel = "0.5.15"
