--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ symphonia = "0.5.4"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 crossbeam-channel = "0.5.15"
+serde = { version = "1.0.225", features = ["derive"] }
+serde_json = "1.0.145"
