--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 crossbeam-channel = "0.5.15"
 serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
+rng = "0.1.0"
+rand = "0.9.2"
