--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 rng = "0.1.0"
 rand = "0.9.2"
+dialoguer = "0.12.0"
