--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trackmaker-rs"
 version = "0.0.1"
 edition = "2024"
+default-run = "trackmaker-rs"
 
 [dependencies]
 jack = "0.13.3"
@@ -15,3 +16,4 @@ serde_json = "1.0.145"
 rng = "0.1.0"
 rand = "0.9.2"
 dialoguer = "0.12.0"
+hound = "3.5.1"
