--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ref/fldigi"]
 	path = ref/fldigi
 	url = https://github.com/w1hkj/fldigi.git
+[submodule "ref/acoustic_link"]
+	path = ref/acoustic_link
+	url = https://github.com/get-jiang/acoustic_link.git
