--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ serde_json = "1.0.145"
 rng = "0.1.0"
 rand = "0.9.2"
 dialoguer = "0.12.0"
+rayon = "1.10.0"
+reed-solomon = "0.2.1"
+rustfft = "6.2.0"
+hound = "3.5.1"
