--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trackmaker-rs"
 version = "0.0.1"
 edition = "2024"
+default-run = "trackmaker-amodem"
 
 [[bin]]
 name = "trackmaker-amodem"
@@ -23,3 +24,4 @@ serde_json = "1.0.145"
 num-complex = "0.4"
 crc32fast = "1.4"
 clap = { version = "4.0", features = ["derive"] }
+rubato = "0.15"
