feat: 138ms with quantum adjust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ ctrlc = "3"
 clap = { version = "4", features = ["derive"] }
 pcap = "2.0.0"
 byteorder = "1.4"
+
+[build]
+rustflags = ["-C", "target-cpu=native"]
