--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ dialoguer = "0.12.0"
 hound = "3.5.1"
 ctrlc = "3"
 clap = { version = "4", features = ["derive"] }
-pcap = "2.0.0"
+pcap = { version = "2.0.0", features = ["capture-stream"] }
 byteorder = "1.4"
 etherparse = "0.19.0"
 
