--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ clap = { version = "4", features = ["derive"] }
 pcap = { version = "2.0.0", features = ["capture-stream"] }
 byteorder = "1.4"
 etherparse = "0.19.0"
+tun = "0.8.4"
 
 [build]
 rustflags = ["-C", "target-cpu=native"]
